git branch issues, add dark mode but not completed.

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+:root {
+  --background-color: white;
+  --text-color: black;
+}
+
+.dark-mode {
+  --background-color: #2a2e37;
+  --text-color: white;
+}
+
 .App {
   text-align: center;
+  font-family: 'Roboto', 'Courier New', Courier, monospace, sans-serif; /* Add your desired font family here */
 }
 
 .App-logo {
@@ -7,10 +18,8 @@
   pointer-events: none;
 }
 
-
-
 .App-header {
-  background-color: #2a2e37;
+  background: linear-gradient(#03863a, #f2f2f2); /* Add your desired gradient colors here */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -18,6 +27,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-family: 'Roboto', sans-serif; /* Add your desired font family here */
 }
 
 .App-link {
